[API] Fix the GetCountRecordsByStatus Endpoint
