# src/DPWH.EDMS.Api/swagger.json
@@ -2509,7 +2509,7 @@
             "content": {
               "application/json; api-version=1.0": {
                 "schema": {
-                  "$ref": "#/components/schemas/Int32BaseApiResponse"
+                  "$ref": "#/components/schemas/RecordRequestStatusCountModelBaseApiResponse"
                 }
               }
             }
@@ -5363,19 +5363,6 @@
         },
         "additionalProperties": false
       },
-      "Int32BaseApiResponse": {
-        "type": "object",
-        "properties": {
-          "success": {
-            "type": "boolean"
-          },
-          "data": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
       "Lookup": {
         "type": "object",
         "properties": {
@@ -5670,6 +5657,32 @@
           "AuthorizationDocument"
         ],
         "type": "string"
+      },
+      "RecordRequestStatusCountModel": {
+        "type": "object",
+        "properties": {
+          "statusName": {
+            "type": "string",
+            "nullable": true
+          },
+          "total": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "RecordRequestStatusCountModelBaseApiResponse": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          },
+          "data": {
+            "$ref": "#/components/schemas/RecordRequestStatusCountModel"
+          }
+        },
+        "additionalProperties": false
       },
       "RecoverDataLibraryResult": {
         "type": "object",
