# src/DPWH.EDMS.Application/Models/RecordRequests/RecordRequestStatusCountModel.cs
@@ -1,0 +1,14 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace DPWH.EDMS.Application.Models.RecordRequests;
+
+public class RecordRequestStatusCountModel
+{
+    public string StatusName { get; set; }
+    public int Total { get; set; }
+}
+
